--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* "Magic Formula" by "Comina" ----- */
+/* "Magic Formula" by "Comina" --------------- */
 
 *,
 *::before,
@@ -14,7 +14,7 @@ html {
 
 
 
-/* Общие стили --------------------- */
+/* Общие стили ------------------------------- */
 
 body {
     margin: 0;
@@ -43,7 +43,7 @@ img {
 
 
 
-/* Прячем доступно ----------------- */
+/* Прячем доступно --------------------------- */
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden {
@@ -66,7 +66,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Обертка-центровщик -------------- */
+/* Обертка-центровщик ------------------------ */
 
 .container {
     min-width: 768px;
@@ -84,7 +84,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Хедер, Навигация ---------------- */
+/* Хедер, Навигация -------------------------- */
 
 .main-header {
     min-height: 56px;
@@ -165,7 +165,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Футер ------------------ */
+/* Футер ------------------------------------- */
 
 .main-footer {
     display: flex;
@@ -275,7 +275,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Добро пожаловать ---------------- */
+/* Добро пожаловать -------------------------- */
 
 .welcome {
     position: relative;
@@ -311,7 +311,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Преимущества -------------------- */
+/* Преимущества ------------------------------ */
 
 .features {
     padding-top: 61px;
@@ -487,7 +487,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Предложения --------------------- */
+/* Предложения ------------------------------- */
 
 .offers {
     padding-top: 52px;
@@ -549,7 +549,7 @@ input[type="checkbox"].visually-hidden {
 
 
 
-/* Модальное окно ------------------ */
+/* Модальное окно ---------------------------- */
 
 .modal-hotel-search {
     position: absolute;
@@ -617,7 +617,7 @@ input[type="checkbox"].visually-hidden {
     padding-top: 7px;
 
     text-align: left;
-    
+
     cursor: pointer;
 }
 
@@ -771,7 +771,7 @@ input[type="checkbox"].visually-hidden {
     background-color: #5496bd;
 }
 
-/* Явная стилизация placeholder ---- */
+/* Явная стилизация placeholder */
 .hotel-search-form input::-webkit-input-placeholder {
     color: #000000;
     opacity: 1;
@@ -796,12 +796,13 @@ input[type="checkbox"].visually-hidden {
     color: #000000;
     opacity: 1;
 }
+/* =========================================== */
 
 
 
 
 
-/* Карта ------------------ */
+/* Карта ------------------------------------- */
 
 .map {
     height: 593px;
@@ -818,40 +819,28 @@ input[type="checkbox"].visually-hidden {
 
 
 
-
-
-
-
-
-
-
-
-
-/* ======================= Ниже - гостиницы. ================= */
-/* ======================= Потом все перемещу наверх ======================= */
-/* ======================= и аккуратно расставлю ======================== */
-
-
-
-
-
-
-
-/* Фильтр каталога ----------------- */
+/* Фильтр каталога --------------------------- */
 
 .hotels-filter-setting {
+    min-height: 217px;
+    padding-top: 28px;
+    padding-bottom: 28px;
+    
     background-color: #737f88;
     background-image: url("../img/background-blur.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 16%;
-    padding-top: 28px;
-    padding-bottom: 28px;
+}
+
+.hotels-filter-form {
+    display: flex;
 }
 
 .hotels-filter-form fieldset {
     margin: 0;
     padding: 0;
+
     border: none;
 }
 
@@ -860,14 +849,13 @@ input[type="checkbox"].visually-hidden {
 }
 
 .hotels-filter-form legend {
+    margin: 0;
+    padding: 0;
+
     font-size: 16px;
     line-height: 21px;
     color: #ffffff;
-    margin: 0;
-    padding: 0;
 }
-
-
 
 .hotels-filter-form input,
 .hotels-filter-form label {
@@ -882,15 +870,151 @@ input[type="checkbox"].visually-hidden {
     cursor: pointer;
 }
 
-.hotels-filter-form label:disabled {
-    color: #6a6a6a;
+.filter-checkbox-list {
+    margin: 0;
+    padding: 0;
+    margin-top: 22px;
+    padding-left: 40px;
+
+    list-style: none;
 }
 
+.filter-option {
+    margin-top: 20px;
+}
 
+.filter-option label {
+    position: relative;
 
+    cursor: pointer;
+    user-select: none;
+}
 
+.filter-input-checkbox + label::before {
+    content: "";
+
+    position: absolute;
+    top: -4px;
+    left: -40px;
+
+    width: 30px;
+    height: 30px;
+
+    background-image: url("../img/checkbox-off.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.filter-input-checkbox:checked + label::before {
+    background-image: url("../img/checkbox-on.svg");
+}
+
+.filter-input-checkbox:disabled + label::before {
+    opacity: 0.3;
+}
+
+.filter-input-checkbox:checked:disabled + label::before {
+    opacity: 0.3;
+}
+
+.right-fildset-wrapper {
+    width: 30%;
+    margin-left: auto;
+}
+
+.filter-price-container {
+    position: relative;
+
+    height: 36px;
+    margin-top: 9px;
+    margin-bottom: 20px;
+    padding: 0;
+
+    border: 2px solid #ffffff;
+    border-radius: 2px;
+}
+
+.filter-price-container::after {
+    content: "";
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 2px;
+    height: 22px;
+
+    background: #ffffff;
+
+    transform: translate(-50%, -50%);
+}
+
+.filter-label-price {
+    display: inline-block;
+    vertical-align: middle;
+    width: 49%;
+    
+    text-align: right;
+}
+
+.filter-input-price {
+    width: 50%;
+    height: 32px;
+
+    background-color: transparent;
+    border: none;
+}
+
+/* Слайдер */
+.range-controls {
+    position: relative;
+
+    margin-bottom: 32px;
+}
+
+.range-controls .scale {
+    height: 2px;
+
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+    width: 80%;
+    height: 2px;
+
+    background: #ffffff;
+}
+
+.range-toggle {
+    position: absolute;
+    top: -9px;
+
+    width: 20px;
+    height: 20px;
+
+    background-color: #ababab;
+    border: 8px solid #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+
+    cursor: pointer;
+}
+
+.range-toggle:hover {
+    background: #1c4f80;
+}
+
+.range-toggle-min {
+    left: 0;
+}
+
+.range-toggle-max {
+    left: 80%;
+}
+/* =========================================== */
 
 .filter-button {
+    display: block;
     margin: 0 auto;
     padding: 6px 35px;
 
@@ -907,8 +1031,6 @@ input[type="checkbox"].visually-hidden {
     border-radius: 2px;
 
     cursor: pointer;
-
-    display: block;
 }
 
 .filter-button:hover {
@@ -921,16 +1043,29 @@ input[type="checkbox"].visually-hidden {
 
 
 
-
-
-/* Результаты фильтрации ----------- */
+/* Результаты фильтрации --------------------- */
 
 .hotels-filter-results {
     background-color: #ffffff;
 }
 
+.filter-info-container {
+    display: flex;
+    min-height: 86px;
+    padding-top: 31px;
+}
+
 .filter-result-count {
+    min-width: 135px; 
+    margin: 0;
+
     font-size: 21px;
+}
+
+.filter-result-sorting {
+    margin: 0;
+    margin-left: 30px;
+    padding-top: 5px;
 }
 
 .filter-result-sorting,
@@ -940,226 +1075,55 @@ input[type="checkbox"].visually-hidden {
     line-height: 18px;
 }
 
-.sorting-direction-list span {
-    font-size: 12px;
-}
-.sorting-type-list,
-.sorting-direction-list {
-    list-style: none;
-}
-
-.sorting-type-list a {
-    color: rgba(0,0,0,0.3);
-    border-bottom: 1px dotted #81b3d2;
-}
-
-.sorting-type-list a:hover,
-.sorting-type-list a:focus {
-    color: #81b3d2;
-    border-bottom: 1px dotted #81b3d2;
-}
-
-.sorting-type-list a:active {
-    color: #000000;
-    border-bottom: none;
-}
-
-a.active-sorting-type {
-    color: #81b3d2;
-    border-bottom: none;
-}
-
-.sorting-direction-list a {
-    color: #cacaca;
-}
-
-.sorting-direction-list a:hover,
-.sorting-direction-list a:focus {
-    color: #231f20;
-}
-
-.sorting-direction-list a:active {
-    color: #81b3d2;
-}
-
-a.active-sorting-direction {
-    color: #81b3d2;
-}
-
-
-
-
-/* Список отелей ------------------- */
-
-.filter-result-list {
-    list-style: none;
-}
-
-.filter-result-item {
-    border-top: 1px solid #e5e5e5; 
-}
-.filter-result-item:last-child {
-    border-bottom: 1px solid #e5e5e5; 
-}
-
-a.filter-item-title {
-    color: #000000;
-    font-size: 21px;
-    text-decoration: none;
-}
-
-a.filter-item-title:hover,
-a.filter-item-title:focus {
-    color: #81b3d2;
-}
-
-a.filter-item-title:active {
-    color: rgba(0,0,0,0.3);
-}
-
-.more-info-button,
-.reservation-button {
-    line-height: 21px;
-    color: #ffffff;
-    display: block;
-    text-align: center;
-    margin-top: 14px;
-    padding: 3px 17px;
-
-}
-
-.more-info-button:active,
-.reservation-button:active {
-    color: rgba(255,255,255,0.3);
-}
-
-.more-info-button {
-    background-color: #81b3d2;
-}
-
-.reservation-button {
-    background-color: #766357;
-}
-
-.more-info-button:hover {
-    background-color: #669ec0;
-}
-
-.reservation-button:hover {
-    background-color: #604e43;
-}
-
-.more-info-button:active {
-    background-color: #5496bd;
-}
-
-.reservation-button:active {
-    background-color: #503e33;
-}
-
-.hotel-type,
-.hotel-price,
-.hotel-stars,
-.hotel-rating {
-    font-weight: 400;
-    line-height: 21px;
-}
-
-
-.hotel-stars, .hotel-rating {
-    margin: 0;
-}
-
-.hotel-stars {
-    text-align: right;
-    background-image: url(../img/star.svg);
-    background-repeat: space no-repeat;
-    margin-left: auto;
-    height: 20px;
-    width: 100px;
-}
-
-.one-star {
-    width: 18px;
-}
-
-.two-star {
-    width: 41px;
-}
-
-.three-star {
-    width: 65px;
-}
-
-.four-star {
-    width: 89px;
-}
-
-.five-star {
-    width: 107px;
-}
-
-.hotel-rating {
-    background-color: #f2f2f2;
-    margin-top: 42px;
-    padding-left: 14px;
-    padding-right: 12px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-}
-
-
-.hotels-filter-setting {
-    min-height: 217px;
-}
-
-.hotels-filter-form {
+.sorting-type-list {
     display: flex;
-}
-
-
-
-.filter-info-container {
-    display: flex;
-    min-height: 86px;
-    padding-top: 31px;
-}
-
-.filter-info-container ul {
-
-}
-
-.filter-result-count {
+    width: 100%;
     margin: 0;
-    min-width: 135px; 
-}
+    margin-left: 39px;
+    padding: 0;
+    padding-top: 1px;
 
-.filter-result-sorting {
-    margin: 0;
-    margin-left: 30px;
-    padding-top: 5px;
+    list-style: none;
 }
 
 .sorting-type-list li {
     margin-right: 33px;
 }
 
-.sorting-type-list {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 100%;
-    margin-left: 39px;
-    padding-top: 1px;
+.sorting-type-list a {
+    color: rgba(0,0,0,0.3);
+
+    border-bottom: 1px dotted #81b3d2;
+}
+
+.sorting-type-list a:hover,
+.sorting-type-list a:focus {
+    color: #81b3d2;
+
+    border-bottom: 1px dotted #81b3d2;
+}
+
+.sorting-type-list a:active {
+    color: #000000;
+
+    border-bottom: none;
+}
+
+.sorting-type-list a.active-sorting-type {
+    color: #81b3d2;
+
+    border-bottom: none;
 }
 
 .sorting-direction-list {
+    display: flex;
+    justify-content: flex-end;
     min-width: 110px;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: flex-end;
     padding-top: 1px;
+
+    list-style: none;
 }
 
 .sorting-direction-list li {
@@ -1176,9 +1140,10 @@ a.filter-item-title:active {
 
 .sorting-direction-up,
 .sorting-direction-down {
-    border: 6px solid transparent;
     width: 10px;
     height: 10px;
+
+    border: 6px solid transparent;
 }
 
 .sorting-direction-up {
@@ -1215,17 +1180,26 @@ a.filter-item-title:active {
     border-bottom-color: #81b3d2;
 }
 
+
+
+
+
+/* Список отелей ----------------------------- */
+
 .filter-result-list {
     margin: 0;
     padding: 0;
+
+    list-style: none;
 }
 
 .filter-result-item {
     min-height: 150px;
-}
 
+    border-top: 1px solid #e5e5e5; 
+}
 .filter-result-item:last-child {
-    min-height: 150px;
+    border-bottom: 1px solid #e5e5e5; 
 }
 
 .hotel-container {
@@ -1239,23 +1213,8 @@ a.filter-item-title:active {
 }
 
 .hotel-description-container {
-    margin-left: 30px;
     width: 100%;
-}
-
-.rating-and-stars-container {
-    min-width: 110px;
-}
-
-.detail-descriptions-container {
-    display: flex;
-    flex-direction: row;
-    padding-top: 5px;
-}
-
-.detail-description-container {
-    margin-right: 6px;
-    min-width: 110px;
+    margin-left: 30px;
 }
 
 .hotel-description-container h3,
@@ -1268,154 +1227,126 @@ a.filter-item-title:active {
     margin-top:-4px;
 }
 
+.hotel-description-container a.filter-item-title {
+    color: #000000;
+    font-size: 21px;
+    text-decoration: none;
+}
 
+.hotel-description-container a.filter-item-title:hover,
+.hotel-description-container a.filter-item-title:focus {
+    color: #81b3d2;
+}
 
+.hotel-description-container a.filter-item-title:active {
+    color: rgba(0,0,0,0.3);
+}
 
-.filter-checkbox-list {
+.details-descriptions-container {
+    display: flex;
+    flex-direction: row;
+    padding-top: 5px;
+}
+
+.detail-description-container {
+    min-width: 110px;
+    margin-right: 6px;
+}
+
+.hotel-type,
+.hotel-price,
+.hotel-stars,
+.hotel-rating {
+    font-weight: 400;
+    line-height: 21px;
+}
+
+.more-info-button,
+.reservation-button {
+    display: block;
+    margin-top: 14px;
+    padding: 3px 17px;
+
+    line-height: 21px;
+    color: #ffffff;
+    
+    text-align: center;
+}
+
+.more-info-button:active,
+.reservation-button:active {
+    color: rgba(255,255,255,0.3);
+}
+
+.more-info-button {
+    background-color: #81b3d2;
+}
+
+.reservation-button {
+    background-color: #766357;
+}
+
+.more-info-button:hover {
+    background-color: #669ec0;
+}
+
+.reservation-button:hover {
+    background-color: #604e43;
+}
+
+.more-info-button:active {
+    background-color: #5496bd;
+}
+
+.reservation-button:active {
+    background-color: #503e33;
+}
+
+.rating-and-stars-container {
+    min-width: 110px;
+}
+
+.hotel-stars, .hotel-rating {
     margin: 0;
-    padding: 0;
-    margin-top: 22px;
-    list-style: none;
-    padding-left: 40px;
 }
 
-
-
-/* ================ Слайдер ================ */
-.range-controls {
-  position: relative;
-
-  margin-bottom: 32px;
-}
-
-.range-controls .scale {
-  height: 2px;
-
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.range-controls .bar {
-  width: 80%;
-  height: 2px;
-
-  background: #ffffff;
-}
-
-.range-toggle {
-    position: absolute;
-    top: -9px;
-    width: 20px;
+.hotel-stars {
+    width: 100px;
     height: 20px;
-    background-color: #ababab;
-    border: 8px solid #ffffff;
-    border-radius: 50%;
-    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
-    cursor: pointer;
-}
-
-.range-toggle:hover {
-  background: #1c4f80;
-}
-
-.range-toggle-min {
-  left: 0;
-}
-
-.range-toggle-max {
-  left: 80%;
-}
-/* =================================== */
-
-
-
-.right-fildset-wrapper {
     margin-left: auto;
-    width: 30%;
-}
 
-.filter-price-container {
-    border: 2px solid #ffffff;
-    margin-bottom: 20px;
-    border-radius: 2px;
-    position: relative;
-    margin-top: 9px;
-    height: 36px;
-    padding: 0;
-}
-
-.filter-price-container::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 2px;
-    height: 22px;
-    background: #ffffff;
-    transform: translate(-50%, -50%);
-}
-
-.filter-label-price {
     text-align: right;
 
-    width: 49%;
-    display: inline-block;
-    vertical-align: middle;
+    background-image: url(../img/star.svg);
+    background-repeat: space no-repeat;
 }
 
-.filter-input-price {
-    background-color: transparent;
-    border: none;
-    width: 50%;
-    height: 32px;
+/* Ширина для отображения звезд */
+.one-star {
+    width: 18px;
 }
-
-
-
-
-.filter-input-checkbox {
-
+.two-star {
+    width: 41px;
 }
-
-.filter-option {
-    margin-top: 20px;
+.three-star {
+    width: 65px;
 }
-
-.filter-option label {
-    cursor: pointer;
-    user-select: none;
-    position: relative;
+.four-star {
+    width: 89px;
 }
-
-
-.filter-input-checkbox + label::before {
-    content: "";
-
-    position: absolute;
-    top: -4px;
-    left: -40px;
-
-    width: 30px;
-    height: 30px;
-
-    background-image: url("../img/checkbox-off.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-
+.five-star {
+    width: 107px;
 }
+/* =========================================== */
 
-.filter-input-checkbox:checked + label::before {
-    background-image: url("../img/checkbox-on.svg");
+.hotel-rating {
+    margin-top: 42px;
+    padding-left: 14px;
+    padding-right: 12px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+
+    color: #666666;
+
+    background-color: #f2f2f2;
 }
-
-.filter-input-checkbox:disabled + label::before {
-    opacity: 0.3;
-}
-
-.filter-input-checkbox:checked:disabled + label::before {
-    opacity: 0.3;
-}
-
-
-
-
-
